# VirtualEndoscopy

./: .gitignore  Changelog.txt  README.md  deploy.config.js  old_deploy.config.js  old_package-lock.json  old_package.json  package.json  testplan.txt
ArterialTreeBuilder/: ArterialTreeBuilder.cpp  ArterialTreeBuilderDLL.pro  ArterialTreeBuilderDLL_global.h  CMakeLists.txt  InteropFFR3.1.rc  ReadMe.txt  Resource.h  eigen.cpp  ffrservice.cpp  ffrservice.h  graph.cpp  hessian2d3d.cpp  hessian_filters.cpp  idt.cpp  imgaussian.cpp  lws.cpp  main.cpp  mvox.h  stdafx.cpp  stdafx.h  targetver.h  thinner.cpp  tracer.cpp  tracer.h  utils.cpp  vtb.cpp
ArterialTreeBuilder/Headers/: configuration.h  eigen.hpp  graph.h  hessian2d3d.hpp  hessian_filters.hpp  idt.hpp  imgaussian.hpp  thinner.hpp  utils.h  vtb.hpp
FFR/: FFR.tre  input_data.tre
TortuosityPrototype/: 3Dinterpolation.py  curvature.py  curvatures.txt  segmentNumbers.txt
bootstrap/: Dockerfile.u.1  Dockerfile.u.2  Dockerfile0  Dockerfile3  build-pea-atb.sh
lib/: .gitignore  App.php  Config.php  autoload.php
old_scripts/: Dockerfile-wine-blood  deploy.js  deploy.sh
old_www/: .gitignore  atb-stdout.txt  main-min.html  main.html  service-log.txt  service.php
scripts/: Dockerfile-wine-base  Dockerfile.u.0  Dockerfile.u.1  Dockerfile.u.2  Dockerfile.u.3  build-pea-atb.sh  buildServer.cjs  bundler.go  deploy.js
server/: .gitignore  go.mod  go.sum
web/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
www/: Changelog.txt  closure-library  (+3 more)
(+261 files in other folders)
